# owui-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  update-schema.py
.github/workflows/: publish.yml
src/owui_cli/: cli.py
src/owui_cli/data/: api-schema.json
