[project]
name = "owui-cli"
version = "0.3.0"
description = "Admin CLI for Open WebUI instances"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]
keywords = ["open-webui", "admin", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/rndmcnlly/owui-cli"
Repository = "https://github.com/rndmcnlly/owui-cli"

[project.scripts]
owui-cli = "owui_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owui_cli"]
